# iridium

./: .clang-format  .gitignore  Build.sh  CMakeLists.txt  CONTRIBUTING.md  README.md  test.txt  text.txt
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-extension.md  feature-request.md
Demos/: SimpleWindow.c  SimpleWindow.cpp
Include/: Errors.h  Errors.hpp  Files.hpp  Ignition.hpp  Iridium.h  Logging.h  Logging.hpp  Memory.h  Types.hpp  Version.hpp  Window.hpp
Modules/: FindWayland.cmake
Source/: Errors.c  Errors.cpp  Files.cpp  Ignition.cpp  Iridium.c  Logging.c  Logging.cpp  Memory.c  Version.cpp  Window.cpp
Source/Internal/: Wayland.c  Wayland.h  XDGShell.h
Source/Private/: Vulkan.cpp  Vulkan.hpp  Wayland.cpp  Wayland.hpp
Source/Vulkan/: Vulkan.cpp  Vulkan.hpp
Source/Wayland/: Wayland.cpp  Wayland.hpp  _wl.h
